fixing arima data simulation ....

--- a/project/data_simulation/DataSimulation_SARIMAX.ipynb
+++ b/project/data_simulation/DataSimulation_SARIMAX.ipynb
@@ -18,10 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 3,
    "id": "13788c0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'SARIMAX_Simulation_class'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#from statsmodels.graphics.tsaplots import plot_acf, plot_acf\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#from datetime import datetime\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSARIMAX_Simulation_class\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SARIMAX_Simulation\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'SARIMAX_Simulation_class'"
+     ]
+    }
+   ],
    "source": [
     "### Import Modules\n",
     "import numpy as np\n",
@@ -44,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 4,
    "id": "77f0bc0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "### Set number of periods\n",
-    "start = \"01/2014\"\n",
-    "end = \"12/2024\"\n",
+    "start = \"01/2004\"\n",
+    "end = \"12/2023\"\n",
     "\n",
     "# or:\n",
     "#years = 10\n",
@@ -927,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
