--- a/project/forecasting.ipynb
+++ b/project/forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "100   1.12238  1.12188    1.12234  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "<Axes: xlabel='time'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,49 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# External Modules\n",
-    "from darts.models import XGBModel, NaiveDrift, NaiveMovingAverage, AutoARIMA, RandomForest\n",
-    "\n",
-    "# Naive models\n",
-    "model_naive = NaiveMovingAverage(input_chunk_length=1)\n",
-    "model_naive_drift = NaiveDrift()\n",
-    "\n",
-    "# Not-so naive models\n",
-    "model_XGB = XGBModel(lags=12)\n",
-    "model_RF = RandomForest(lags=12)\n",
-    "model_AutoARIMA = AutoARIMA()\n",
-    "\n",
-    "models = [model_naive, model_naive_drift, model_XGB]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.helpers import timeseries_to_array\n",
-    "\n",
-    "target_values = timeseries_to_array(val, pop=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pipeline.darts_uni import univariate_models\n",
-    "from pipeline.darts_uni import hfc_models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f85fc6bf1d24ce3a3bc6f687025704f",
+       "model_id": "ed85fc60c9ab42dfbffa49593ce47570",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40693815685d4cc0ad5a2a8d346c96b7",
+       "model_id": "58d539459d5b4e54a843fd474d8223fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e193056073a42dca511784e9f8f081e",
+       "model_id": "3f3ec07335ec41f7b6abae535df392bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,7 +307,39 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "from pipeline.darts_uni import univariate_models\n",
+    "from pipeline.darts_uni import hfc_models\n",
+    "\n",
+    "# Print univariate model pool\n",
+    "print(f'Models:\\n {univariate_models}')\n",
+    "\n",
+    "# Historically train univariate models\n",
+    "historical_forecasts = hfc_models(univariate_models, target_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.helpers import timeseries_to_array\n",
+    "\n",
+    "# Get target values\n",
+    "target_values = timeseries_to_array(val, pop=False)\n",
+    "\n",
+    "# Add Target column to dataframe\n",
+    "historical_forecasts.insert(0, 'Target', target_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -371,6 +361,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>New_Column_Name</th>\n",
        "      <th>NaiveMovingAverage</th>\n",
        "      <th>NaiveDrift</th>\n",
        "      <th>XGBModel</th>\n",
@@ -379,30 +370,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1.11908</td>\n",
        "      <td>1.11913</td>\n",
        "      <td>1.119121</td>\n",
        "      <td>1.119230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1.11933</td>\n",
        "      <td>1.11908</td>\n",
        "      <td>1.119071</td>\n",
        "      <td>1.119102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1.11925</td>\n",
        "      <td>1.11908</td>\n",
        "      <td>1.119071</td>\n",
        "      <td>1.119102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1.11923</td>\n",
        "      <td>1.11933</td>\n",
        "      <td>1.119322</td>\n",
        "      <td>1.119353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1.11917</td>\n",
        "      <td>1.11925</td>\n",
        "      <td>1.119241</td>\n",
        "      <td>1.119266</td>\n",
@@ -412,69 +408,72 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>695</th>\n",
+       "      <td>1.11580</td>\n",
        "      <td>1.11517</td>\n",
        "      <td>1.115163</td>\n",
        "      <td>1.115072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>696</th>\n",
+       "      <td>1.11559</td>\n",
        "      <td>1.11542</td>\n",
        "      <td>1.115414</td>\n",
        "      <td>1.115322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>697</th>\n",
+       "      <td>1.11563</td>\n",
        "      <td>1.11580</td>\n",
        "      <td>1.115794</td>\n",
        "      <td>1.115588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>698</th>\n",
+       "      <td>1.11533</td>\n",
        "      <td>1.11559</td>\n",
        "      <td>1.115584</td>\n",
        "      <td>1.115381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>699</th>\n",
+       "      <td>1.11530</td>\n",
        "      <td>1.11563</td>\n",
        "      <td>1.115624</td>\n",
        "      <td>1.115478</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>700 rows × 3 columns</p>\n",
+       "<p>700 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     NaiveMovingAverage  NaiveDrift  XGBModel\n",
-       "0               1.11913    1.119121  1.119230\n",
-       "1               1.11908    1.119071  1.119102\n",
-       "2               1.11908    1.119071  1.119102\n",
-       "3               1.11933    1.119322  1.119353\n",
-       "4               1.11925    1.119241  1.119266\n",
-       "..                  ...         ...       ...\n",
-       "695             1.11517    1.115163  1.115072\n",
-       "696             1.11542    1.115414  1.115322\n",
-       "697             1.11580    1.115794  1.115588\n",
-       "698             1.11559    1.115584  1.115381\n",
-       "699             1.11563    1.115624  1.115478\n",
+       "     New_Column_Name  NaiveMovingAverage  NaiveDrift  XGBModel\n",
+       "0            1.11908             1.11913    1.119121  1.119230\n",
+       "1            1.11933             1.11908    1.119071  1.119102\n",
+       "2            1.11925             1.11908    1.119071  1.119102\n",
+       "3            1.11923             1.11933    1.119322  1.119353\n",
+       "4            1.11917             1.11925    1.119241  1.119266\n",
+       "..               ...                 ...         ...       ...\n",
+       "695          1.11580             1.11517    1.115163  1.115072\n",
+       "696          1.11559             1.11542    1.115414  1.115322\n",
+       "697          1.11563             1.11580    1.115794  1.115588\n",
+       "698          1.11533             1.11559    1.115584  1.115381\n",
+       "699          1.11530             1.11563    1.115624  1.115478\n",
        "\n",
-       "[700 rows x 3 columns]"
+       "[700 rows x 4 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'Models:\\n {univariate_models}')\n",
-    "\n",
-    "# Historically train univariate models\n",
-    "hfc_models(univariate_models, target_series)"
+    "historical_forecasts"
    ]
   }
  ],
