update ensembling still not working...

--- a/project/forecasting.ipynb
+++ b/project/forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "100   1.12238  1.12188    1.12234  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "<Axes: xlabel='time'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed85fc60c9ab42dfbffa49593ce47570",
+       "model_id": "783c70b2b535416f916c8d1be5d9fd6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58d539459d5b4e54a843fd474d8223fb",
+       "model_id": "594be37061ad4a4fb0da1342ef25be1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f3ec07335ec41f7b6abae535df392bc",
+       "model_id": "c4a6ffb628a54ecbb9289ca93a9f1cb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>New_Column_Name</th>\n",
+       "      <th>Target</th>\n",
        "      <th>NaiveMovingAverage</th>\n",
        "      <th>NaiveDrift</th>\n",
        "      <th>XGBModel</th>\n",
@@ -451,23 +451,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     New_Column_Name  NaiveMovingAverage  NaiveDrift  XGBModel\n",
-       "0            1.11908             1.11913    1.119121  1.119230\n",
-       "1            1.11933             1.11908    1.119071  1.119102\n",
-       "2            1.11925             1.11908    1.119071  1.119102\n",
-       "3            1.11923             1.11933    1.119322  1.119353\n",
-       "4            1.11917             1.11925    1.119241  1.119266\n",
-       "..               ...                 ...         ...       ...\n",
-       "695          1.11580             1.11517    1.115163  1.115072\n",
-       "696          1.11559             1.11542    1.115414  1.115322\n",
-       "697          1.11563             1.11580    1.115794  1.115588\n",
-       "698          1.11533             1.11559    1.115584  1.115381\n",
-       "699          1.11530             1.11563    1.115624  1.115478\n",
+       "      Target  NaiveMovingAverage  NaiveDrift  XGBModel\n",
+       "0    1.11908             1.11913    1.119121  1.119230\n",
+       "1    1.11933             1.11908    1.119071  1.119102\n",
+       "2    1.11925             1.11908    1.119071  1.119102\n",
+       "3    1.11923             1.11933    1.119322  1.119353\n",
+       "4    1.11917             1.11925    1.119241  1.119266\n",
+       "..       ...                 ...         ...       ...\n",
+       "695  1.11580             1.11517    1.115163  1.115072\n",
+       "696  1.11559             1.11542    1.115414  1.115322\n",
+       "697  1.11563             1.11580    1.115794  1.115588\n",
+       "698  1.11533             1.11559    1.115584  1.115381\n",
+       "699  1.11530             1.11563    1.115624  1.115478\n",
        "\n",
        "[700 rows x 4 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,6 +475,95 @@
    "source": [
     "historical_forecasts"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading metrics...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.metrics import rmse\n",
+    "from utils.weigthing_methods import simple_average, compute_rmse_weights, ensemble_predictions_given_weights, compute_variance_weights, compute_error_correlation_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Target  SimpleAverage  RMSEWeights  VarianceWeights  ErrorCorrWeights\n",
+      "0    1.11908       1.119160     1.119158         1.119162          1.119133\n",
+      "1    1.11933       1.119084     1.119084         1.119085          1.119071\n",
+      "2    1.11925       1.119084     1.119083         1.119084          1.119071\n",
+      "3    1.11923       1.119335     1.119334         1.119335          1.119323\n",
+      "4    1.11917       1.119253     1.119252         1.119253          1.119241\n",
+      "..       ...            ...          ...              ...               ...\n",
+      "695  1.11580       1.115135     1.115137         1.115134          1.115147\n",
+      "696  1.11559       1.115385     1.115388         1.115384          1.115398\n",
+      "697  1.11563       1.115727     1.115733         1.115725          1.115762\n",
+      "698  1.11533       1.115518     1.115524         1.115516          1.115552\n",
+      "699  1.11530       1.115577     1.115581         1.115576          1.115600\n",
+      "\n",
+      "[700 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Assuming you have the 'Actual' column in your dataframe\n",
+    "\n",
+    "# Define a function to create the new DataFrame with predictions\n",
+    "def create_predictions_df(data):\n",
+    "    # Initialize an empty DataFrame\n",
+    "    predictions_df = pd.DataFrame()\n",
+    "\n",
+    "    # Add 'Actual' column to the new DataFrame\n",
+    "    predictions_df['Target'] = data['Target']\n",
+    "\n",
+    "    # Compute predictions using simple average\n",
+    "    predictions_df['SimpleAverage'] = simple_average(data)\n",
+    "\n",
+    "    # Compute RMSE weights and predictions\n",
+    "    rmse_weights = compute_rmse_weights(data)\n",
+    "    predictions_df['RMSEWeights'] = ensemble_predictions_given_weights(data, rmse_weights)\n",
+    "\n",
+    "    # Compute variance weights and predictions\n",
+    "    variance_weights = compute_variance_weights(data)\n",
+    "    predictions_df['VarianceWeights'] = ensemble_predictions_given_weights(data, variance_weights)\n",
+    "\n",
+    "    # Compute error correlation weights and predictions\n",
+    "    error_corr_weights = compute_error_correlation_weights(data, verbose=False)\n",
+    "    predictions_df['ErrorCorrWeights'] = ensemble_predictions_given_weights(data, error_corr_weights)\n",
+    "\n",
+    "    return predictions_df\n",
+    "\n",
+    "# Now call the function to create the new DataFrame\n",
+    "ensemble_predictions_df = create_predictions_df(historical_forecasts)\n",
+    "\n",
+    "# Print the new DataFrame\n",
+    "print(ensemble_predictions_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
