--- a/project/interface/DataSimulation_SARIMAX.ipynb
+++ b/project/interface/DataSimulation_SARIMAX.ipynb
@@ -18,32 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "13788c0c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'SARIMAX_Simulation_class'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#from statsmodels.graphics.tsaplots import plot_acf, plot_acf\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#from datetime import datetime\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSARIMAX_Simulation_class\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SARIMAX_Simulation\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'SARIMAX_Simulation_class'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Import Modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "import matplotlib.pyplot as plt\n",
-    "#from statsmodels.graphics.tsaplots import plot_acf, plot_acf\n",
-    "#from datetime import datetime\n",
     "import os\n",
-    "from SARIMAX_Simulation_class import SARIMAX_Simulation"
+    "from data_simulation.SARIMAX_sim_class import SARIMAX_Simulation"
    ]
   },
   {
