updating pipeline + running pipeline notebook once :)

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,3 @@
-General:
-- add a small testing dataframe to test pipeline a bit faster...
-
 =========
 PIPELINE:
 =========
@@ -15,15 +12,17 @@ run_pipeline():
 pipe1_data_preprocessing():
 - everything
 - make generic for daily  data etc.
+- monthly in print durch if bedingung ersetzen, welche df.index.freq erkennt
+- add arguments target_colnme und cov colname, wenn nicht assume that target is in first col und rest are covariates
 
 pipe2_individual_forecasts():
 - docstring, comments fehlen noch
-- # Todo: check if SARIMAX loop takes updated params (trace = True)
+- check if SARIMAX loop takes updated params (trace = True)
 - make more generic for all models that have fit and predict method; consider removing historical forecast method etc => as in arima
 
 pipe3_ensemble_forecasts():
 - comment, docstring 
-- streamlining
+- streamlining code
 
 pipe4_metrics_ranking():
 - streamline code
@@ -33,5 +32,4 @@ pipe4_metrics_ranking():
 =========
 Interface
 =========
-run_pipeline.ipynb:
-- # monthly in print durch if bedingung ersetzen, welche df.index.freq erkennt
+
