--- a/ToDo.txt
+++ b/ToDo.txt
@@ -30,9 +30,11 @@ pipe2_individual_forecasts():
 - docstring, comments
 - check if SARIMAX loop takes updated params (trace = True)
 - make more generic for all models that have fit and predict method; consider removing historical forecast method etc => as in arima
+- use ceil() instead of int() to ensure including the desired proportion into the train set
 
 pipe3_ensemble_forecasts():
 - comment, docstring 
+- use ceil() instead of int() to ensure including the desired proportion into the train set
 
 pipe4_metrics_ranking():
 - comment, docstring
