--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -256,7 +256,11 @@
       "AutoSARIMA forecast 160 / 749\n",
       "AutoSARIMA forecast 170 / 749\n",
       "AutoSARIMA forecast 180 / 749\n",
-      "AutoSARIMA forecast 190 / 749\n"
+      "AutoSARIMA forecast 190 / 749\n",
+      "AutoSARIMA forecast 200 / 749\n",
+      "AutoSARIMA forecast 210 / 749\n",
+      "AutoSARIMA forecast 220 / 749\n",
+      "AutoSARIMA forecast 230 / 749\n"
      ]
     }
    ],
