--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -260,7 +260,32 @@
       "AutoSARIMA forecast 200 / 749\n",
       "AutoSARIMA forecast 210 / 749\n",
       "AutoSARIMA forecast 220 / 749\n",
-      "AutoSARIMA forecast 230 / 749\n"
+      "AutoSARIMA forecast 230 / 749\n",
+      "AutoSARIMA forecast 240 / 749\n",
+      "...automatic refitting...\n",
+      "AutoSARIMA forecast 250 / 749\n",
+      "AutoSARIMA forecast 260 / 749\n",
+      "AutoSARIMA forecast 270 / 749\n",
+      "AutoSARIMA forecast 280 / 749\n",
+      "AutoSARIMA forecast 290 / 749\n",
+      "AutoSARIMA forecast 300 / 749\n",
+      "AutoSARIMA forecast 310 / 749\n",
+      "AutoSARIMA forecast 320 / 749\n",
+      "AutoSARIMA forecast 330 / 749\n",
+      "AutoSARIMA forecast 340 / 749\n",
+      "AutoSARIMA forecast 350 / 749\n",
+      "AutoSARIMA forecast 360 / 749\n",
+      "AutoSARIMA forecast 370 / 749\n",
+      "AutoSARIMA forecast 380 / 749\n",
+      "AutoSARIMA forecast 390 / 749\n",
+      "AutoSARIMA forecast 400 / 749\n",
+      "AutoSARIMA forecast 410 / 749\n",
+      "AutoSARIMA forecast 420 / 749\n",
+      "AutoSARIMA forecast 430 / 749\n",
+      "AutoSARIMA forecast 440 / 749\n",
+      "AutoSARIMA forecast 450 / 749\n",
+      "AutoSARIMA forecast 460 / 749\n",
+      "AutoSARIMA forecast 470 / 749\n"
      ]
     }
    ],
