adding inner function arguments to outer functions

--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -285,7 +285,22 @@
       "AutoSARIMA forecast 440 / 749\n",
       "AutoSARIMA forecast 450 / 749\n",
       "AutoSARIMA forecast 460 / 749\n",
-      "AutoSARIMA forecast 470 / 749\n"
+      "AutoSARIMA forecast 470 / 749\n",
+      "AutoSARIMA forecast 480 / 749\n",
+      "AutoSARIMA forecast 490 / 749\n",
+      "...automatic refitting...\n",
+      "AutoSARIMA forecast 500 / 749\n",
+      "AutoSARIMA forecast 510 / 749\n",
+      "AutoSARIMA forecast 520 / 749\n",
+      "AutoSARIMA forecast 530 / 749\n",
+      "AutoSARIMA forecast 540 / 749\n",
+      "AutoSARIMA forecast 550 / 749\n",
+      "AutoSARIMA forecast 560 / 749\n",
+      "AutoSARIMA forecast 570 / 749\n",
+      "AutoSARIMA forecast 580 / 749\n",
+      "AutoSARIMA forecast 590 / 749\n",
+      "AutoSARIMA forecast 600 / 749\n",
+      "AutoSARIMA forecast 610 / 749\n"
      ]
     }
    ],
