adding *args and **kwargs to pipe4

--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -300,7 +300,13 @@
       "AutoSARIMA forecast 580 / 749\n",
       "AutoSARIMA forecast 590 / 749\n",
       "AutoSARIMA forecast 600 / 749\n",
-      "AutoSARIMA forecast 610 / 749\n"
+      "AutoSARIMA forecast 610 / 749\n",
+      "AutoSARIMA forecast 620 / 749\n",
+      "AutoSARIMA forecast 630 / 749\n",
+      "AutoSARIMA forecast 640 / 749\n",
+      "AutoSARIMA forecast 650 / 749\n",
+      "AutoSARIMA forecast 660 / 749\n",
+      "AutoSARIMA forecast 670 / 749\n"
      ]
     }
    ],
